# car-distance-finder

./: CMakeLists.txt  README.md  design.txt  main.py  vehicle.py
data/model/: README
legacy/: main.py  vehicle.py
snap/: snapcraft.yaml
src/: CMakeLists.txt  mono-processor.hpp  util.h  vehicle-tracker.cpp
src/test/: CMakeLists.txt  misc.cpp
